修改了一些问题

--- a/tab.html
+++ b/tab.html
@@ -28,7 +28,7 @@
                     <!--             <pre>{{info | json}}</pre>  -->
         </div>
         <pre>data : {{runLoad}}</pre>
-        <toggle-switch ng-model="runLoad" ng-change="test()"></toggle-switch>
+        <toggle-switch ng-model="runLoad"></toggle-switch>
 
     </div>
 
