--- a/tab.html
+++ b/tab.html
@@ -17,18 +17,18 @@
             <h2>{{ date.raw | date:'EEEE, MMMM yyyy' }}</h2>
         </div>
 
-        <div class="stock">
-
-                    <!--<pre ng-repeat="info in stock.info | orderBy:OrderByTime: true ">-->
-                    <!--code:{{info.attr.stockcode}}-->
-                    <!--price:{{info.data[".price"]}}-->
-                    <!--ctime:{{info.data[".ctime"]}}-->
-                    <!--</pre>-->
-                    <!-- stockname:{{info.data[".stockname"]}}</br> -->
-                    <!--             <pre>{{info | json}}</pre>  -->
-        </div>
-        <pre>data : {{runLoad}}</pre>
+        <!--<pre>data : {{runLoad}}</pre>-->
         <toggle-switch ng-model="runLoad"></toggle-switch>
+
+        <div class="stock">
+            <pre ng-repeat="info in stock.info | orderBy:OrderByTime: true ">
+                code:{{info.attr.stockcode}}
+                stockname:{{info.data[".stockname"]}}
+                price:{{info.data[".price"]}}
+                ctime:{{info.data[".ctime"]}}
+            </pre>
+        </div>
+
 
     </div>
 
