--- a/tab.html
+++ b/tab.html
@@ -26,7 +26,9 @@
                 stockname:{{info.data[".stockname"]}}
                 price:{{info.data[".price"]}}
                 ctime:{{info.data[".ctime"]}}
+                {{info| json}}
             </pre>
+
         </div>
 
 
